<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note Taker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Title:</string>
    <string name="date">Date:</string>
    <string name="note">Note:</string>
    <string name="save">Save</string>
    <string name="_">-</string>
    <string name="title_activity_list_notes">Note Taker</string>
    <string name="add_new">Add Note</string>
    <string name="add_note">Add Note</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_cannot_be_undone">Are you sure, cannot be undone</string>
    <string name="confirm_delete">Confirm Delete</string>

</resources>